tests/snapshots/sfc/js/patches__v_else_if_with_v_bind_object_spread.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createBlock as _createBlock, mergeProps as _mergeProps, unref as _unref } from "vue";
import { ref } from "vue";
import Icon from "./Icon.vue";
export default {
  __name: "test",
  setup(__props) {
    const mode = ref("edit");
    const iconProps = {
      size: 24,
      color: "blue"
    };
    return (_ctx, _cache) => {
      return mode.value === "view" ? (_openBlock(), _createBlock(Icon, {
        key: 0,
        name: "eye"
      })) : mode.value === "edit" ? (_openBlock(), _createBlock(Icon, _mergeProps(_unref(iconProps), {
        key: 1,
        name: "pencil"
      }))) : (_openBlock(), _createBlock(Icon, {
        key: 2,
        name: "default"
      }));
    };
  }
};
