tests/snapshots/sfc/js/patches__v_if_with_v_model_on_input.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'

export default {
  __name: 'test',
  setup(__props) {

const show = ref(true)
const text = ref('')

return (_ctx, _cache) => {
  return (show.value)
      ? (_openBlock(), _createElementBlock("input", { key: 0, , "onUpdate:modelValue": $event => ((text.value) = $event) }))
      : _createCommentVNode("v-if", true)
}
}

}
