tests/snapshots/sfc/js/patches__v_model_on_select_with_ref.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, withDirectives as _withDirectives, vModelSelect as _vModelSelect } from "vue";
import { ref } from "vue";
const _hoisted_1 = /*#__PURE__*/ _createElementVNode("option", { value: "option1" }, "Option 1");
const _hoisted_2 = /*#__PURE__*/ _createElementVNode("option", { value: "option2" }, "Option 2");
export default {
  __name: "test",
  setup(__props) {
    const selected = ref("option1");
    return (_ctx, _cache) => {
      return _withDirectives((_openBlock(), _createElementBlock("select", { "onUpdate:modelValue": ($event) => selected.value = $event }, [_hoisted_1, _hoisted_2], 8, ["onUpdate:modelValue"])), [[_vModelSelect, selected.value]]);
    };
  }
};
