tests/snapshots/sfc/js/patches__v_slot_mixed_hyphenated_and_regular_names.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createBlock as _createBlock, createTextVNode as _createTextVNode, withCtx as _withCtx } from "vue";
import Layout from "./Layout.vue";
export default {
  __name: "test",
  setup(__props) {
    return (_ctx, _cache) => {
      return _openBlock(), _createBlock(Layout, null, {
        header: _withCtx(() => [_createTextVNode("Regular")]),
        "main-content": _withCtx(() => [_createTextVNode("Hyphenated")]),
        footer: _withCtx(() => [_createTextVNode("Regular Again")]),
        _: 1
      });
    };
  }
};
